--- a/my-app/src/components/GospelitoPage.css
+++ b/my-app/src/components/GospelitoPage.css
@@ -2,8 +2,9 @@ body {
     font-family: 'Fredoka', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -29,8 +30,9 @@ body {
 }
 
 .subtitle {
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: #2a4d9b;
+    font-weight: bold;
     margin-bottom: 20px;
     margin-top: 0px;
 }
